# spikewrap

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CITATION.CFF  CNAME  LICENSE  MANIFEST.in  README.md  api_index.html  genindex.html  index.html  main.py  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  sg_execution_times.html  sitemap.xml  tox.ini
.github/workflows/: lint_and_deploy.yml  lint_and_test.yml  lint_test_and_deploy.yml  linting.yml
.obsidian/: workspace.json
_downloads/031ffd67b0bc69038ea3169518aba842/: 05_sync_channel.ipynb
_downloads/1b78c956b905ca9db77396f424f428d0/: 03_running_with_slurm.ipynb
_downloads/312e02bf1a79e7ae671421269478fcf9/: 01_preprocessing_sessions.py
_downloads/46a58970111e1fbe4baf488bc26547ea/: 02_managing_configs.ipynb
_downloads/84618662e1cded1b953406fb5ee4bdea/: 03_run_in_slurm.ipynb
_downloads/914f6aa71a9c233ef97a715b91e7b2f6/: 05_sync_channel.ipynb
_downloads/a401741985ee8add1023651fca1a9b36/: feature_overview.py
_downloads/a66e67ad94dc82ecebb0a1f4211ec092/: slow_feature_overview.ipynb
_downloads/af890faa7aa94c5c23e6d5e86b239879/: 04_slow_spike_sorting.ipynb
_downloads/b11c3a7535fc308b1a755a6085256416/: 01_preprocessing_sessions.ipynb
_downloads/b364d6087087ba17a8b67e8080236751/: 05_sync_channel.py
_downloads/d46db65c842dc1702f995c5066b357de/: 04_slow_spike_sorting.ipynb
_downloads/dc1a0b92f1f751a6733d331b0a9db959/: 03_running_with_slurm.py
_downloads/de200bfdef89d4f2263a9b90954a13bb/: 01_preprocess_a_session.ipynb
_downloads/e7c3b83382ad0e2fcb3670c0331533ee/: 02_managing_configs.py
_downloads/ef51e7cf78cab22f8c0edf9fe57050fa/: 03_run_in_slurm.py
_downloads/f0ffd28ca57ded6b6e2ade76a9799822/: 01_preprocess_a_session.py
_downloads/f808a1cff7f39c20c6d9cccfa6648d85/: package_overview.ipynb
_downloads/fb6c5015252dad11a7cb0dd481e535c0/: 01a_supported_preprocessing_steps.ipynb
_downloads/ff1c45223aba6de8af5e58eb33ad6b10/: 02_manage_configs.ipynb
_modules/: index.html
_modules/spikewrap/configs/: config_utils.html  hpc.html
_modules/spikewrap/structure/: session.html
_modules/spikewrap/utils/: _slurm.html  (+1 more)
_sources/: index.md.txt  sg_execution_times.rst.txt
_sources/community/: contributing_guidelines.md.txt  feature_roadmap.md.txt  index.md.txt
_sources/get_started/: index.md.txt  install.md.txt  installation.md.txt  output_folder_formats.md.txt  supported_formats.md.txt
_static/css/: custom.css
community/: contributing_guidelines.html  feature_roadmap.html  index.html
docs/: Makefile  make.bat  requirements.txt
docs/source/: api_index.rst  conf.py  index.md  sg_execution_times.rst
gallery_builds/get_started/: feature_overview.html  index.html  package_overview.html  sg_execution_times.html  slow_feature_overview.html
gallery_builds/how_to/: 01_preprocess_a_session.html  02_manage_configs.html  03_run_in_slurm.html  04_slow_spike_sorting.html  05_sync_channel.html  06_plot_probe.html  index.html  sg_execution_times.html
gallery_builds/tutorials/: 01_preprocessing_sessions.html  01a_supported_preprocessing_steps.html  02_managing_configs.html  03_running_with_slurm.html  04_slow_spike_sorting.html  05_sync_channel.html  index.html  sg_execution_times.html
get_started/: index.html  install.html  installation.html  output_folder_formats.html  supported_formats.html
spikewrap/: __init__.py  command_line_interface.py
spikewrap/configs/: config_utils.py  configs.py  default.yaml  fast_test_pipeline.yaml  hpc.py  neuropixels.yaml  test_default.yaml  test_pp_small_file.yaml  test_preprocessing_1.yaml  test_preprocessing_2.yaml
spikewrap/data_classes/: base.py  playing.py  postprocessing.py  preprocessed_run_recording.py  preprocessing.py  sorting.py
spikewrap/examples/: example_full_pipeline.py  example_postprocess.py  example_preprocess.py  example_session.py  example_sort.py  example_visualise.py  example_visualise_preprocessing_output.py  load_data.py
spikewrap/pipeline/: full_pipeline.py  load_data.py  postprocess.py  preprocess.py  sort.py  visualise.py
spikewrap/process/: _loading.py  _preprocessing.py  _saving.py  preprocessing.py
spikewrap/structure/: _preprocess_run.py  _preprocessed.py  _raw_run.py  _run.py  _sorting_run.py  raw_run.py  session.py
spikewrap/utils/: _checks.py  _managing_sorters.py  _slurm.py  _utils.py  checks.py  custom_types.py  getters.py  logging_sw.py  managing_images.py  slurm.py  utils.py  validate.py
spikewrap/visualise/: _visualise.py
swc_ephys/: command_line_interface.py
swc_ephys/.obsidian/: workspace.json
swc_ephys/configs/: configs.py  default.yaml  test.yaml  test_all_pp.yaml  test_pp_large_file.yaml  test_pp_small_file.yaml
swc_ephys/data_classes/: base.py  preprocessing.py  sorting.py
swc_ephys/examples/: example_full_pipeline.py  example_postprocess.py  example_quality.py  example_rename_metadata_paths.py  example_sort.py  example_visualise.py  example_visualise_preprocessing_output.py
swc_ephys/pipeline/: data_class.py  full_pipeline.py  load_data.py  postprocess.py  preprocess.py  quality.py  sort.py  visualise.py  waveform_compare.py
swc_ephys/utils/: slurm.py  utils.py
swc_epys/: example_full_pipeline.py
swc_epys/configs/: configs.py  data_class.py
swc_epys/examples/: example_quality.py  example_sort.py  example_visualise.py
swc_epys/pipeline/: data_class.py  full_pipeline.py  preprocess.py  quality.py  sort.py  visualise.py
swc_epys/utils/: utils.py
test_data/: generate_dummy_openephys.py
tests/: conftest.py  test_data_readme.md  test_slurm_pickling.py
tests/_tests_internal/: README.md  _test_slurm.py  _test_sorting_internal.py
tests/test_data/: README.md
tests/test_integration/: README.md  base.py  playing.py  test_diagnostic_plots.py  test_full_pipeline.py  test_initial.py  test_load_data.py  test_managing_images.py  test_openephys.py  test_plot_probe.py  test_preprocess.py  test_preprocessing.py  test_probe.py  test_slurm.py  test_smoke.py  test_sorting.py  test_spikeglx_run_loading.py  test_sync.py  test_validate.py  test_whiten.py
(+155 files in other folders)
