[project]
name = "spikewrap"
authors = [{name = "Joe Ziminski", email= "joseph.j.ziminski@gmail.com"}]
description = "Run extracellular electrophysiology analysis with SpikeInterface"
readme = "README.md"
requires-python = ">=3.8.0"
dynamic = ["version"]

license = {text = "BSD-3-Clause"}

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
]

dependencies = [
    "spikeinterface==0.98.2",
    "jax",
    "jaxlib",
    "spython",  # I think missing from SI?
    "submitit",
    "PyYAML",
    "toml",
    # sorter-specific
    "tridesclous",
    # "spyking-circus", TODO: this is not straightforward, requires mpi4py. TBD if we want to manage this.
    "mountainsort5",
    "docker",  # TODO: windows only!
    "cuda-python",
]

[project.urls]
homepage = "https://github.com/JoeZiminski/spikewrap"
bug_tracker = "https://github.com/JoeZiminski/spikewrap/issues"
documentation = "https://github.com/JoeZiminski/spikewrap"
source_code = "https://github.com/JoeZiminski/spikewrap"
user_support = "https://github.com/JoeZiminski/spikewrap/issues"


[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "coverage",
  "tox",
  "black",
  "mypy",
  "pre-commit",
  "ruff",
  "setuptools_scm",
  "types-setuptools",
  "types-PyYAML",
  "types-toml",
]

[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["spikewrap*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
addopts = "--cov=spikewrap"

[tool.black]
target-version = ['py38', 'py39', 'py310']
skip-string-normalization = false
line-length = 88

[tool.setuptools_scm]

[tool.check-manifest]
ignore = [
  "*.yaml",
  "tox.ini",
  "tests/*",
  "tests/test_unit/*",
  "tests/test_integration/*",
  ".flake8"
]

[tool.ruff]
ignore = ["E501"]  # E501: line length violation (let Black handle, ignore strings).

exclude = ["__init__.py","build",".eggs"]
select = ["I", "E", "F"]
fix = true

[tool.cibuildwheel]
build = "cp38-* cp39-* cp310-*"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[project.scripts]
spikewrap = "spikewrap.command_line_interface:main"
