[project]
name = "spikewrap"
authors = [{name = "Joe Ziminski", email= "joseph.j.ziminski@gmail.com"}]
description = "Run extracellular electrophysiology analysis with SpikeInterface"
readme = "README.md"
requires-python = ">=3.9.0"
dynamic = ["version"]

license = {text = "BSD-3-Clause"}

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
]

dependencies = [
    "spikeinterface[full]", # Do i need to pin to version? YES but what one
    "submitit",
    "slurmio",
    "psutil",
    "toml",
    "PyYAML",
]

[project.urls]
homepage = "https://github.com/JoeZiminski/spikewrap"
bug_tracker = "https://github.com/JoeZiminski/spikewrap/issues"
documentation = "https://github.com/JoeZiminski/spikewrap"
source_code = "https://github.com/JoeZiminski/spikewrap"
user_support = "https://github.com/JoeZiminski/spikewrap/issues"


[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "coverage",
  "tox",
  "black",
  "mypy",
  "pre-commit",
  "ruff",
  "setuptools_scm",
  "types-setuptools",
  "types-PyYAML",
  "types-toml",
]

[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["spikewrap*"]
exclude = ["tests*", "docs*"]

[tool.pytest.ini_options]
addopts = "--cov=spikewrap"

[tool.black]
target-version = ['py38', 'py39', 'py310']
skip-string-normalization = false
line-length = 88

[tool.setuptools_scm]

[tool.check-manifest]
ignore = [
  "*.yaml",
  "tox.ini",
  "tests/*",
  "tests/test_unit/*",
  "tests/test_integration/*",
  ".flake8"
]

[tool.ruff]
line-length = 79
exclude = ["__init__.py", "pyproject.toml", "build",".eggs"]
select = ["I", "E", "F", "TCH", "TID252"]
fix = true
ignore = ["E203","E501","E731","C901","W291","W293","E402","E722"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.mccabe]
max-complexity = 18

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.mypy]
exclude = "^docs/.*"
