[project]
name = "spikewrap"
authors = [{name = "Joe Ziminski", email= "joseph.j.ziminski@gmail.com"}]
description = "Run extracellular electrophysiology analysis with SpikeInterface"
readme = "README.md"
requires-python = ">=3.9.0, <3.13"
dynamic = ["version"]

license = {text = "BSD-3-Clause"}

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
]

dependencies = [
    "spikeinterface[full]==0.102.3",
    "neo==0.14.1",
    "submitit",
    "slurmio",
    "psutil",
    "toml",
    "PyYAML",
]

[project.urls]
homepage = "https://github.com/JoeZiminski/spikewrap"
bug_tracker = "https://github.com/JoeZiminski/spikewrap/issues"
documentation = "https://github.com/JoeZiminski/spikewrap"
source_code = "https://github.com/JoeZiminski/spikewrap"
user_support = "https://github.com/JoeZiminski/spikewrap/issues"


[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "coverage",
  "tox",
  "black",
  "mypy",
  "pre-commit",
  "ruff",
  "setuptools_scm",
  "types-setuptools",
  "types-PyYAML",
  "types-toml",
  "mountainsort5; sys_platform != 'darwin'"  # TODO: Currently isosplit6 not installing on some macOS runners. Turned off in the tests too.
]

[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["spikewrap*"]
exclude = ["tests*", "docs*"]

[tool.pytest.ini_options]
addopts = "--cov=spikewrap"

[tool.black]
target-version = ['py39', 'py310', 'py311', 'py312']
skip-string-normalization = false
line-length = 88

[tool.setuptools_scm]

[tool.check-manifest]
ignore = [
  "*.yaml",
  "tox.ini",
  "tests/*",
  "tests/test_unit/*",
  "tests/test_integration/*",
  ".flake8"
]

[tool.ruff]
line-length = 88
exclude = ["__init__.py", "pyproject.toml", "build", ".eggs"]
fix = true

[tool.ruff.lint]
select = ["I", "E", "F", "TCH", "TID252"]
ignore = ["E203", "E501", "E731", "C901", "W291", "W293", "E402", "E722"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.mypy]
exclude = "^docs/.*"
